# study_hmm

./: .gitignore  CMakeLists.txt  Doxyfile
scripts/: Ball.hpp  HMM.cpp  HMM.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Vase.cpp  Vase.hpp  main.cpp
